# AERO-21D

catkin_diff_gps/: readme.txt
catkin_diff_gps/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_diff_gps/devel/lib/diff_gps/: GPSstatepublisher  gpspublisher  imupublisher  imupublisherNew  test_gpspub  test_imupub  test_velocitypub  tfbroadcaster
catkin_diff_gps/devel/lib/pkgconfig/: diff_gps.pc
catkin_diff_gps/devel/share/diff_gps/cmake/: diff_gpsConfig.cmake
catkin_diff_gps/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_diff_gps/src/diff_gps/: CMakeLists.txt  package.xml
catkin_diff_gps/src/diff_gps/launch/: tfbroad.launch
catkin_diff_gps/src/diff_gps/src/: crcLib.cpp  imupublisher.cpp  imupublisherNew.cpp  linuxserial.cpp  linuxserial.h  test_gpspub.cpp  test_imupub.cpp  test_velocitypub.cpp  tfbroadcaster.cpp
clash/: config.yaml  readme.txt
tsinghua_pure/src/autoware_msgs/: CMakeLists.txt
tsinghua_pure/src/way_follower/nodes/pure_pursuit/: pure_pursuit.h  pure_pursuit_core.cpp
tsinghua_pure/way_follower/: CMakeLists.txt  package.xml
tsinghua_pure/way_follower/nodes/pure_pursuit/: pure_pursuit.cpp  pure_pursuit_core.h
